--- a/about.html
+++ b/about.html
@@ -9,58 +9,76 @@
 		<link href="css/bootstrap.css" rel="stylesheet">
 		<link href="css/bootstrap-responsive.css" rel="stylesheet" media="screen">
 		<link href="css/my_css.css" rel="stylesheet">
+		<meta name="viewport" content="width=device-width" />
 	</head>
 	<body>
 		<div class="navbar navbar-inverse navbar-fixed-top">
 			<div class="navbar-inner">
 				<div class="container">
-					<a class="btn btn-navbar" data-toggle="collapse"
-					data-target=".nav-collapse">
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					</a>
-					<a class="brand" href="index.html">Rosanna's Portfolio</a>
-					<div class="nav-collapse in collapse">
-						<ul class="nav">
-							<li>
-								<a href="index.html">Home</a>
-							</li>
-							<li class="divider-vertical"></li>
-							<li class="active">
-								<a href="about.html">About Me</a>
-							</li>
-							<li class="divider-vertical"></li>
-							<li>
-								<a href="projects.html">Projects</a>
-							</li>
-							<li class="divider-vertical"></li>
-							<li>
-								<a href="skills.html">Skills</a>
-							</li>
-							<li class="divider-vertical"></li>
-							<li>
-								<a href="process.html">Process</a>
-							</li>
-							<li class="divider-vertical"></li>
-						</ul>
+					<div class="span12">
+						<a class="btn btn-navbar" data-toggle="collapse"
+						data-target=".nav-collapse">
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						</a>
+						<div class="span1" id="logo">
+							<a href="index.html">
+								<img src="img/sponge.png" alt="sponge_logo">
+							</a>
+						</div>
+						<div class="span3">
+							<a class="brand" href="index.html">
+								Rosanna's Portfolio</a>
+						</div>
+						<div class="nav-collapse in collapse">
+							<ul class="nav">
+								<li>
+									<a href="index.html">Home</a>
+								</li>
+								<li class="divider-vertical"></li>
+								<li class="active">
+									<a href="about.html">About Me</a>
+								</li>
+								<li class="divider-vertical"></li>
+								<li>
+									<a href="projects.html">Projects</a>
+								</li>
+								<li class="divider-vertical"></li>
+								<li>
+									<a href="skills.html">Skills</a>
+								</li>
+								<li class="divider-vertical"></li>
+								<li>
+									<a href="process.html">Process</a>
+								</li>
+								<li class="divider-vertical"></li>
+							</ul>
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-		<div class="container">
-			<div class="row page-head" id="about-head">
-				<div class="page-topic">
-					<h1>
-						About Me
-					</h1>
+		<div id="about-head">
+			<div class="container">
+				<div class="span12">
+					<div class="page-topic span2">
+						<img src="img/icons/about.png" alt="about_icon">
+					</div>
+					<div class="span6 offset2">
+						<h1>
+							About Me
+						</h1>
+					</div>
 				</div>
 			</div>
-			<div class="row">
-				<div class="span6">
+		</div>
+		<div id="profile">
+			<div class="container">
+				<div class="span5">
 					<img src="img/me_and_friend.png" alt="me" align="right">
 				</div>
-				<div class="span6">
+				<div class="span5">
 					<p>
 						<h4>Profile</h4>
 						<hr>
@@ -91,8 +109,10 @@
 					</p>
 				</div>
 			</div>
-			<div class="row">
-				<div class="span6">
+		</div>
+		<div id="personal_information">
+			<div class="container">
+				<div class="span5">
 					<h4>Interests</h4>
 					<hr>
 					<ul class="interests">
@@ -110,7 +130,7 @@
 						</li>
 					</ul>
 				</div>
-				<div class="span6">
+				<div class="span5">
 					<p>
 						<h4>Education</h4>
 						<hr>
@@ -152,16 +172,18 @@
 					</p>
 				</div>
 			</div>
-			<footer class="row">
+		</div>
+		<footer>
+			<div class="container">
 				<p class="span12">
-					&copy; 2012 Rosanna Fong 
+					&copy; 2013 Rosanna Fong 
 					| Wellington, New Zealand 
 					| Email: contact@rosanna.co.nz
 					| <a href="http://www.linkedin.com/pub/rosanna-fong/37/ab6/201">
 					<img src="img/linkedin.png"></a>
 				</p>
-			</footer>
-		</div>
+			</div>
+		</footer>
 		<script src="http://code.jquery.com/jquery-latest.js"></script>
 		<script src="js/bootstrap.min.js"></script>
 	</body>
