--- a/process.html
+++ b/process.html
@@ -9,61 +9,79 @@
 		<link href="css/bootstrap.css" rel="stylesheet">
 		<link href="css/bootstrap-responsive.css" rel="stylesheet">
 		<link href="css/my_css.css" rel="stylesheet">
+		<meta name="viewport" content="width=device-width" />
 	</head>
 	<body>
 		<div class="navbar navbar-inverse navbar-fixed-top">
 			<div class="navbar-inner">
 				<div class="container">
-					<a class="btn btn-navbar" data-toggle="collapse"
-					data-target=".nav-collapse">
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					</a>
-					<a class="brand" href="index.html">Rosanna's Portfolio</a>
-					<div class="nav-collapse in collapse">
-						<ul class="nav">
-							<li>
-								<a href="index.html">Home</a>
-							</li>
-							<li class="divider-vertical"></li>
-							<li>
-								<a href="about.html">About Me</a>
-							</li>
-							<li class="divider-vertical"></li>
-							<li>
-								<a href="projects.html">Projects</a>
-							</li>
-							<li class="divider-vertical"></li>
-							<li>
-								<a href="skills.html">Skills</a>
-							</li>
-							<li class="divider-vertical"></li>
-							<li class="active">
-								<a href="process.html">Process</a>
-							</li>
-							<li class="divider-vertical"></li>
-						</ul>
+					<div class="span12">
+						<a class="btn btn-navbar" data-toggle="collapse"
+						data-target=".nav-collapse">
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						</a>
+						<div class="span1" id="logo">
+							<a href="index.html">
+								<img src="img/sponge.png" alt="sponge_logo">
+							</a>
+						</div>
+						<div class="span3">
+							<a class="brand" href="index.html">
+								Rosanna's Portfolio</a>
+						</div>
+						<div class="nav-collapse in collapse">
+							<ul class="nav">
+								<li>
+									<a href="index.html">Home</a>
+								</li>
+								<li class="divider-vertical"></li>
+								<li>
+									<a href="about.html">About Me</a>
+								</li>
+								<li class="divider-vertical"></li>
+								<li>
+									<a href="projects.html">Projects</a>
+								</li>
+								<li class="divider-vertical"></li>
+								<li>
+									<a href="skills.html">Skills</a>
+								</li>
+								<li class="divider-vertical"></li>
+								<li class="active">
+									<a href="process.html">Process</a>
+								</li>
+								<li class="divider-vertical"></li>
+							</ul>
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-		<div class="container">
-			<div class="row page-head" id="process-head">
-				<div class="page-topic">
-					<h1>
-						My Process
-					</h1>
+		<div id="process-head">
+			<div class="container">
+				<div class="span12">
+					<div class="page-topic span2">
+						<img src="img/icons/process.png" alt="process_icon">
+					</div>
+					<div class="span6 offset2">
+						<h1>
+							My Process
+						</h1>
+					</div>
 				</div>
 			</div>
-			<div class="row process">
-				<div class="span6">
+		</div>
+		<div id="process_set1">
+			<div class="container process">
+				<div class="span5">
 					<h4>Research</h4>
 					<hr>
 					<div class="span2">
 						<img class="img-rounded" src="img/collect.png" alt="research" align="center">
 					</div>
-					<div class="span3">
+					<div class="span2">
 						<p>
 							This stage involves identifying the target audience, finding inspiration from other designers, and pin-pointing the main objective of the project.
 						</p>
@@ -82,68 +100,74 @@
 					</div>
 				</div>
 			</div>
-			<div class="row process">
-				<div class="span6">
+		</div>
+		<div id="process_set2">
+			<div class="container process">
+				<div class="span5">
 					<h4>Conceptualise</h4>
 					<hr>
 					<div class="span2">
 						<img class="img-rounded" src="img/experiment.png" alt="conceptualise" align="center">
 					</div>
-					<div class="span3">
+					<div class="span2">
 						<p>
 							Ideas are sketched out from the brainstorm. As with most of my previous design projects, a sharpie and paper can take me a long way when conceptualising ideas. Draft layouts are drawn at this stage too.
 						</p>
 					</div>
 				</div>
-				<div class="span6">
+				<div class="span5">
 					<h4>Plan</h4>
 					<hr>
 					<div class="span2">
 						<img class="img-rounded" src="img/organise.png" alt="plan" align="center">
 					</div>
-					<div class="span3">
+					<div class="span2">
 						<p>
 							Making a plan can help with time management. Requirements and specifications of the project are established at this stage. Planning for possible challenges can also be beneficial.
 						</p>
 					</div>
 				</div>
 			</div>
-			<div class="row process">
-				<div class="span6">
+		</div>
+		<div id="process_set3">
+			<div class="container process">
+				<div class="span5">
 					<h4>Develop</h4>
 					<hr>
 					<div class="span2">
 						<img class="img-rounded" src="img/grow.png" alt="develop" align="center">
 					</div>
-					<div class="span3">
+					<div class="span2">
 						<p>
 							The nuts and bolts of the project are worked on here. This is where I make use of my technical and problem-solving skills to bring the design to life.
 						</p>
 					</div>
 				</div>
-				<div class="span6">
+				<div class="span5">
 					<h4>Polish</h4>
 					<hr>
 					<div class="span2">
 						<img class="img-rounded" src="img/originality.png" alt="polish" align="center">
 					</div>
-					<div class="span3">
+					<div class="span2">
 						<p>
 							Whenever there's a bit of extra time, I like to add a bit of polish to my work. 
 						</p>
 					</div>
 				</div>
 			</div>
-			<footer class="row">
+		</div>
+		<footer>
+			<div class="container">
 				<p class="span12">
-					&copy; 2012 Rosanna Fong 
+					&copy; 2013 Rosanna Fong 
 					| Wellington, New Zealand 
 					| Email: contact@rosanna.co.nz
 					| <a href="http://www.linkedin.com/pub/rosanna-fong/37/ab6/201">
 					<img src="img/linkedin.png"></a>
 				</p>
-			</footer>
-		</div>
+			</div>
+		</footer>
 		<script src="http://code.jquery.com/jquery-latest.js"></script>
 		<script src="js/bootstrap.min.js"></script>
 	</body>
