--- a/skills.html
+++ b/skills.html
@@ -9,164 +9,185 @@
 		<link href="css/bootstrap.css" rel="stylesheet">
 		<link href="css/bootstrap-responsive.css" rel="stylesheet">
 		<link href="css/my_css.css" rel="stylesheet">
+		<meta name="viewport" content="width=device-width" />
 	</head>
 	<body>
 		<div class="navbar navbar-inverse navbar-fixed-top">
 			<div class="navbar-inner">
 				<div class="container">
-					<a class="btn btn-navbar" data-toggle="collapse"
-					data-target=".nav-collapse">
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					</a>
-					<a class="brand" href="index.html">Rosanna's Portfolio</a>
-					<div class="nav-collapse in collapse">
-						<ul class="nav">
-							<li>
-								<a href="index.html">Home</a>
-							</li>
-							<li class="divider-vertical"></li>
-							<li>
-								<a href="about.html">About Me</a>
-							</li>
-							<li class="divider-vertical"></li>
-							<li>
-								<a href="projects.html">Projects</a>
-							</li>
-							<li class="divider-vertical"></li>
-							<li class="active">
-								<a href="skills.html">Skills</a>
-							</li>
-							<li class="divider-vertical"></li>
-							<li>
-								<a href="process.html">Process</a>
-							</li>
-							<li class="divider-vertical"></li>
-						</ul>
+					<div class="span12">
+						<a class="btn btn-navbar" data-toggle="collapse"
+						data-target=".nav-collapse">
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						</a>
+						<div class="span1" id="logo">
+							<a href="index.html">
+								<img src="img/sponge.png" alt="sponge_logo">
+							</a>
+						</div>
+						<div class="span3">
+							<a class="brand" href="index.html">
+								Rosanna's Portfolio</a>
+						</div>
+						<div class="nav-collapse in collapse">
+							<ul class="nav">
+								<li>
+									<a href="index.html">Home</a>
+								</li>
+								<li class="divider-vertical"></li>
+								<li>
+									<a href="about.html">About Me</a>
+								</li>
+								<li class="divider-vertical"></li>
+								<li>
+									<a href="projects.html">Projects</a>
+								</li>
+								<li class="divider-vertical"></li>
+								<li class="active">
+									<a href="skills.html">Skills</a>
+								</li>
+								<li class="divider-vertical"></li>
+								<li>
+									<a href="process.html">Process</a>
+								</li>
+								<li class="divider-vertical"></li>
+							</ul>
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-		<div class="container">
-			<div class="row page-head" id="skills-head">
-				<div class="page-topic">
-					<h1>
-						My Skills
-					</h1>
-				</div>
-			</div>
-			<div class="row">
+		<div id="skills-head">
+			<div class="container">
 				<div class="span12">
-					<div class="row">
-						<div class="span6">
-							<h4>Web Design</h4>
-							<hr>
-							<p>
-								My experience in web design includes skills in wireframing, designing mockups in Photoshop, and development of the website using HTML, CSS, and JavaScript. I've completed the first version of my portfolio using WordPress, and have recently switched to using Twitter Bootstrap to create a more responsive website.
-							</p>
-							<p>
-								I would like to develop on my skills in web design and development, as this is where I feel my skills are the strongest.
-							</p>
-						</div>
-						<div class="span6">
-							<h4>Graphic Design</h4>
-							<hr>
-							<p>
-								I am experienced with Photoshop and Illustrator to create interesting graphics.
-								I have used these tools to help create assets for 2D games and websites.
-							</p>
-						</div>
+					<div class="page-topic span2">
+						<img src="img/icons/skills.png" alt="skills_icon">
 					</div>
-					<div class="row">
-						<div class="span6">
-							<h4>3D Modelling and Animation</h4>
-							<hr>
-							<p>
-								I have used Maya and Blender to design <a href="projects.html#3D">compelling 3D models</a>.
-								My skills in this area involve box modelling, texturing models, rigging and animation.
-							</p>
-						</div>
-						<div class="span6">
-							<h4>Programming</h4>
-							<hr>
-							<p>
-								I have experience with Object-Oriented Programming, which is used in the design field to create complex graphics in Processing, and accessing the inputs of mobile and tablet devices to create exciting interactive experiments.
-							</p>
-						</div>
-					</div>
-					<div class="row">
-						<div class="span6 skills">
-							<h4>Technical Skills</h4>
-							<hr>
-							<div class="span2">
-								<p>
-								<strong>Software</strong>
-								</p>
-								<ul>
-									<li>Photoshop</li>
-									<li>Illustrator</li>
-									<li>Flash</li>
-									<li>Flash Builder</li>
-									<li>After Effects</li>
-									<li>Maya</li>
-									<li>Blender</li>
-									<li>Processing</li>
-									<li>Word</li>
-									<li>Excel</li>
-									<li>PowerPoint</li>
-								</ul>
-							</div>
-							<div class="span2">
-								<p>
-								<strong>Programming</strong>
-								</p>
-								<ul>
-									<li>HTML</li>
-									<li>CSS</li>
-									<li>JavaScript</li>
-								</ul>
-							</div>
-							<div class="span2">
-								<p>
-								<strong>Platforms</strong>
-								</p>
-								<ul>
-									<li>Windows</li>
-									<li>Macintosh</li>
-									<li>Linux</li>
-								</ul>
-							</div>
-						</div>
-						<div class="span6">
-							<h4>Other Skills</h4>
-							<hr>
-							<p>
-								Interpersonal skills
-							</p>
-							<p>
-								Ability to think creatively
-							</p>
-							<p>
-								Awesome baking
-							</p>
-							<p>
-								Making a mean Vegetarian Lasagna
-							</p>
-						</div>
+					<div class="span6 offset2">
+						<h1>
+							My Skills
+						</h1>
 					</div>
 				</div>
 			</div>
-			<footer class="row">
+		</div>
+			
+		<div id="skillset1">
+			<div class="container">
+				<div class="span5">
+					<h4>Web Design</h4>
+					<hr>
+					<p>
+						My experience in web design includes skills in wireframing, designing mockups in Photoshop, and development of the website using HTML, CSS, and JavaScript. I've completed the first version of my portfolio using WordPress, and have recently switched to using Twitter Bootstrap to create a more responsive website.
+					</p>
+					<p>
+						I would like to develop on my skills in web design and development, as this is where I feel my skills are the strongest.
+					</p>
+				</div>
+				<div class="span5">
+					<h4>Graphic Design</h4>
+					<hr>
+					<p>
+						I am experienced with Photoshop and Illustrator to create interesting graphics.
+						I have used these tools to help create assets for 2D games and websites.
+					</p>
+				</div>
+			</div>
+		</div>
+		<div id="skillset2">
+			<div class="container">
+				<div class="span5">
+					<h4>3D Modelling and Animation</h4>
+					<hr>
+					<p>
+						I have used Maya and Blender to design <a href="projects.html#3D">compelling 3D models</a>.
+						My skills in this area involve box modelling, texturing models, rigging and animation.
+					</p>
+				</div>
+				<div class="span5">
+					<h4>Programming</h4>
+					<hr>
+					<p>
+						I have experience with Object-Oriented Programming, which is used in the design field to create complex graphics in Processing, and accessing the inputs of mobile and tablet devices to create exciting interactive experiments.
+					</p>
+				</div>
+			</div>
+		</div>
+		<div id="skillset3">
+			<div class="container">
+				<div class="span5 skills">
+					<h4>Technical Skills</h4>
+					<hr>
+					<div class="span2">
+						<p>
+						<strong>Software</strong>
+						</p>
+						<ul>
+							<li>Photoshop</li>
+							<li>Illustrator</li>
+							<li>Flash</li>
+							<li>Flash Builder</li>
+							<li>After Effects</li>
+							<li>Maya</li>
+							<li>Blender</li>
+							<li>Processing</li>
+							<li>Word</li>
+							<li>Excel</li>
+							<li>PowerPoint</li>
+						</ul>
+					</div>
+					<div class="span2">
+						<p>
+						<strong>Programming</strong>
+						</p>
+						<ul>
+							<li>HTML</li>
+							<li>CSS</li>
+							<li>JavaScript</li>
+						</ul>
+					</div>
+					<div class="span2">
+						<p>
+						<strong>Platforms</strong>
+						</p>
+						<ul>
+							<li>Windows</li>
+							<li>Macintosh</li>
+							<li>Linux</li>
+						</ul>
+					</div>
+				</div>
+				<div class="span5">
+					<h4>Other Skills</h4>
+					<hr>
+					<p>
+						Interpersonal skills
+					</p>
+					<p>
+						Ability to think creatively
+					</p>
+					<p>
+						Awesome baking
+					</p>
+					<p>
+						Making a mean Vegetarian Lasagna
+					</p>
+				</div>
+			</div>
+		</div>
+		<footer>
+			<div class="container">
 				<p class="span12">
-					&copy; 2012 Rosanna Fong 
+					&copy; 2013 Rosanna Fong 
 					| Wellington, New Zealand 
 					| Email: contact@rosanna.co.nz
 					| <a href="http://www.linkedin.com/pub/rosanna-fong/37/ab6/201">
 					<img src="img/linkedin.png"></a>
 				</p>
-			</footer>
-		</div>
+			</div>
+		</footer>
 		<script src="http://code.jquery.com/jquery-latest.js"></script>
 		<script src="js/bootstrap.min.js"></script>
 	</body>
