--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
 		<link href="css/bootstrap-responsive.css" rel="stylesheet" media="screen">
 		<link href="css/my_css.css" rel="stylesheet">
 		<meta name="viewport" content="width=device-width" />
+        <link rel="shortcut icon" href="/favicon.ico" />
 	</head>
 	<body>
 		<div class="navbar navbar-inverse navbar-fixed-top">
