--- a/skills.html
+++ b/skills.html
@@ -84,7 +84,7 @@
 						My experience in web design includes skills in wireframing, designing mockups in Photoshop, and development of the website using HTML, CSS, and JavaScript. I've completed the first version of my portfolio using WordPress, and have recently switched to using Twitter Bootstrap to create a more responsive website.
 					</p>
 					<p>
-						I would like to develop on my skills in web design and development, as this is where I feel my skills are the strongest.
+						I would like to develop on my skills in front-end development, as this is where I feel my skills are the strongest.
 					</p>
 				</div>
 				<div class="span5">
@@ -92,7 +92,7 @@
 					<hr>
 					<p>
 						I am experienced with Photoshop and Illustrator to create interesting graphics.
-						I have used these tools to help create assets for 2D games and websites.
+						I have used these tools to help create assets for games and websites, as well as using them for creating files for print.
 					</p>
 				</div>
 			</div>
@@ -111,7 +111,7 @@
 					<h4>Programming</h4>
 					<hr>
 					<p>
-						I have experience with Object-Oriented Programming, which is used in the design field to create complex graphics in Processing, and accessing the inputs of mobile and tablet devices to create exciting interactive experiments.
+						I have experience with Object-Oriented Programming to create complex graphics in Processing, and accessing the inputs of mobile and tablet devices to create exciting interactive experiments.
 					</p>
 				</div>
 			</div>
