--- a/projects.html
+++ b/projects.html
@@ -174,7 +174,7 @@
 										<strong>Site Context:</strong> Initial test-blog yet to go live!
 									</p>
 									<p>
-										Visit: <a href="http://http://vbcmusicblog.tumblr.com/" target="_blank">vbcmusicblog.tumblr.com</a>
+										Visit: <a href="http://vbcmusicblog.tumblr.com/" target="_blank">vbcmusicblog.tumblr.com</a>
 									</p>
 								</div>
 							</li>
