Added meta tags to make this site more indexable.

--- a/process.html
+++ b/process.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Rosanna's Portfolio Process</title>
-		<!-- Bootstrap CSS -->
+		<title>Rosanna's Profolio - Process</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="Rosanna Fong" content>
-		<meta name="Rosanna's Design Portfolio" content>
+		<meta name="description" content="Rosanna's Design Portfolio - My Process.">
+		<meta name="keywords" content="portfolio, design, Rosanna Fong, about, projects, skills, process, web design, development, front-end, web development, graphics, interaction, media">
+		<meta name="author" content="Rosanna Fong">
+		<meta name="Copyright" content="©Rosanna Fong 2013. All Rights Reserved.">
+		<meta charset="UTF-8">
 		<link href="css/bootstrap.css" rel="stylesheet">
 		<link href="css/bootstrap-responsive.css" rel="stylesheet">
 		<link href="css/my_css.css" rel="stylesheet">
-		<meta name="viewport" content="width=device-width" />
         <link rel="shortcut icon" href="/favicon.ico" />
 	</head>
 	<body>
