Took away the carousel for mobile devices and added new content to the portfolio page.

--- a/portfolio.html
+++ b/portfolio.html
@@ -55,6 +55,10 @@
           </div>
           <!--left-column-->
           <div class="col-md-5 left-col media">
+            <a href="http://preview.rosanna.co.nz/" class="pull-left thumbnail">
+              <span class="label label-primary">Website design for WFSST. Preview a demo at preview.rosanna.co.nz</span>
+              <img class="img-responsive" src="images/portfolio/web-branding-logos/learning-centre.png" alt="wfsst-website"/>
+            </a>
             <a href="http://foods.rosanna.co.nz/" class="pull-left thumbnail">
               <span class="label label-primary">Website about food deconstruction.</span>
               <img class="img-responsive" src="images/portfolio/web-branding-logos/food_site.jpg" alt="food-website"/>
@@ -111,7 +115,7 @@
         <div class="push">
         </div>
         <div class="container">
-          <div id="print-graphic-design" class="container">
+          <div id="threeD-videos-interactive" class="container">
             <div class="portfolio-tags">
               <span class="label label-default">print</span>
               <span class="label label-warning">graphic-design</span>
@@ -126,6 +130,10 @@
                 <span class="label label-warning">Stamp designs representing my design manifesto.</span>
                 <img class="img-responsive" src="images/portfolio/print-graphics/stamps.png" alt="stamps"/>
               </div>
+              <div class="thumbnail pull-left">
+                <span class="label label-warning">Icon designs and vector graphics - set 1.</span>
+                <img class="img-responsive" src="images/portfolio/print-graphics/icons-and-graphics-set1.png" alt="icons-graphics-set1"/>
+              </div>
             </div>
             <div class="col-md-7 right-col media">
               <div class="thumbnail pull-left">
@@ -135,6 +143,10 @@
               <div class="thumbnail pull-left">
                 <span class="label label-warning">Stamp designs representing my design manifesto.</span>
                 <img class="pull-left img-responsive" src="images/portfolio/print-graphics/manifesto_pot_plant.jpg" alt="manifesto-tree"/>
+              </div>
+              <div class="thumbnail pull-left">
+                <span class="label label-warning">Icon designs and vector graphics - set 2.</span>
+                <img class="img-responsive" src="images/portfolio/print-graphics/icons-and-graphics-set2.png" alt="icons-graphics-set2"/>
               </div>
             </div>
           </div>
