Modified about page.

--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
                   <li>User interface design</li>
                   <li>Creating wireframes</li>
                   <li>Creating style guides and pattern libraries</li>
-                  <li>Creating prototypes in HTML5, CSS3, and JavaScript</li>
+                  <li>HTML5, CSS3, and JavaScript</li>
                   <li>Version control with Git</li>
                   <li>Using web developer tools</li>
                   <li>Vertical rhythm</li>
