Added content to the about page.

--- a/about.html
+++ b/about.html
@@ -51,7 +51,8 @@
                 <ul>
                   <li>Responsive design</li>
                   <li>User interface design</li>
-                  <li>Creating wireframes</li>
+                  <li>Creating wireframes in myBalsamiq</li>
+                  <li>Creating mock ups in Sketch</li>
                   <li>Creating style guides and pattern libraries</li>
                   <li>HTML5, CSS3, and JavaScript</li>
                   <li>Version control with Git</li>
@@ -59,9 +60,14 @@
                   <li>Vertical rhythm</li>
                   <li>Using preprocessors such as SASS</li>
                   <li>Google Analytics</li>
-                  <li>Templating using Handlebars</li>
+                  <li>Templating using Handlebars.js</li>
                   <li>Accessibility and knowledge of the New Zealand Government Web Standards</li>
+                  <li>Front-end Frameworks e.g. Bootstrap and Foundation</li>
+                  <li>Cross-browser testing</li>
+                  <li>Writing in Markdown</li>
+                  <li>Using Adobe Illustrator and Photoshop</li>
                 </ul>
+                <p>I also like to upskill in my spare time.</p>
               </div>
               <div class="col-6">
                 <p><img src="images/brand/web-design.svg" onerror="this.src='images/brand/web-design.png'; this.onerror=null;" class="img-responsive" alt="Different screen resolutions"/></p>
