Added some more content to the about page.

--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
                   <li>Responsive design</li>
                   <li>User interface design</li>
                   <li>Creating wireframes in myBalsamiq</li>
-                  <li>Creating mock ups in Sketch</li>
+                  <li>Designing in Sketch</li>
                   <li>Creating style guides and pattern libraries</li>
                   <li>HTML5, CSS3, and JavaScript</li>
                   <li>Version control with Git</li>
@@ -67,7 +67,7 @@
                   <li>Writing in Markdown</li>
                   <li>Using Adobe Illustrator and Photoshop</li>
                 </ul>
-                <p>I also like to upskill in my spare time.</p>
+                <p>I also like to upskill and try out new tools in my spare time.</p>
               </div>
               <div class="col-6">
                 <p><img src="images/brand/web-design.svg" onerror="this.src='images/brand/web-design.png'; this.onerror=null;" class="img-responsive" alt="Different screen resolutions"/></p>
