Modified Restuarant 88 project page.

--- a/projects/restaurant88.html
+++ b/projects/restaurant88.html
@@ -63,7 +63,7 @@
           <div class="row">
             <div class="col-12">
               <p><img src="../images/restaurant88/restaurant88-wireframe.png" onerror="this.src='../images/restaurant88/restaurant88-wireframe.jpg'; this.onerror=null;" class="img-responsive" alt="Resaturant 88's website wireframe for their about page."/><br/>
-              <span class="label">Resaturant 88's website wireframe for their about page.</label></p>
+              <span class="label">Resaturant 88's website wireframe for their menus page.</label></p>
             </div>
           </div>
           <!--End main content-->
