Modified sketches project page.

--- a/projects/sketches.html
+++ b/projects/sketches.html
@@ -37,7 +37,7 @@
           <div class="container">
             <!--Begin introduction-->
             <h1>Sketches</h1>
-            <p class="big">Demonstrating my love for art.</p>
+            <p class="big">Here is a collection of some of my sketches.</p>
             <!--End introduction-->
           </div>
         </div>
