Added jpg for colours image.

--- a/projects/heat-pump-controller.html
+++ b/projects/heat-pump-controller.html
@@ -63,7 +63,7 @@
           </div>
           <div class="row">
             <div class="col-12">
-              <p><img src="../images/heatpump-controller/colours.png" class="img-responsive" alt="Heat pump Controller colour palette shown in the pattern library."/><br/>
+              <p><img src="../images/heatpump-controller/colours.png" onerror="this.src='../images/heatpump-controller/colours.jpg'; this.onerror=null;" class="img-responsive bordered" alt="Heat pump Controller colour palette shown in the pattern library."/><br/>
               <span class="label">Heat pump Controller colour palette shown in the <a href="http://rosannafong.github.io/heat-pump-controller/components/colours.html">pattern library <span class="sr-only">for the Heat pump Controller. This link will take you to an external website.</span><span class="fa fa-external-link"></span></a>.</label></p>
             </div>
           </div>
